# nays

./: .editorconfig  .flake8  .prettierignore  .prettierrc  COMPLETION_REPORT.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  EMBEDDED_EDITOR_DELIVERY.md  EMBEDDED_EDITOR_INTEGRATION.md  FINAL_SOLUTION_INDEPENDENT_EDITOR.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOGGER_SERVICE_DI_SUMMARY.md  MANIFEST.in  Makefile  PACKAGE_STRUCTURE.md  PACKAGE_UPDATE_VERIFICATION.md  PACKAGING_SUMMARY.md  QUICKSTART_SAVE_CANCEL.md  README.md  TABLE_DISPLAY_SOLUTION.md  TABLE_EDITOR_GUIDE.md  TRANSFORM_EXISTING_TABLEVIEW.md  USAGE.md  YOUR_CODE_TRANSFORMATION.md  example_external_project.py  format.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_enhanced_editor.py  validate_package.py
core/: initializer.py  lifecycle.py  module.py  route.py  router.py
docs/: BASEVIEWMODEL_DI_VERIFICATION.md  EMBEDDED_EDITOR_QUICK_START.md  FORMATTING.md  MIGRATION_COMPLETE.md  QUICK_TRANSFORM_GUIDE.md  SAVE_CANCEL_GUIDE.md  TABLE_DISPLAY_FIX.md
nays/: __init__.py
nays/core/: __init__.py  initializer.py  lifecycle.py  logger.py  module.py  route.py  router.py
nays/helper/: __init__.py  string_helper.py
nays/service/: __init__.py  logger_service.py
nays/ui/: __init__.py  base_dialog.py  base_view.py  base_view_model.py  base_widget.py  base_window.py  based_tabular_model.py
nays/ui/decorator/: __init__.py  file_dialog.py  onsignal_decorator.py
nays/ui/handler/: __init__.py  component_handler.py  config.yml  data_table_handler.py  folder_handler.py  graphic_plot_handler.py  process_handler.py  script_handler.py  string_handler.py  tab_handler.py  table_editor.py  table_view_handler.py  temp_handler.py  template_format_handler.py  tree_view_handler.py
nays/ui/helper/: __init__.py  icon_helper.py  main_icons.qrc  message_box_helper.py  process_output_helper.py
service/: logger_service.py
test/: debug_embedded_editor.py  debug_injection.py  example_add_delete_nodes.py  example_embedded_editor_integration.py  example_enhanced_table_editor.py  example_external_project.py  example_logger_service_injection.py  example_router_interactive.py  example_router_navigation.py  example_save_cancel_callbacks.py  example_table_editor.py  example_tree_view_handler.py  example_viewmodel_scenario.py  simple_visual_test.py  test_base_view_model_di.py  test_button_navigation.py  test_checkbox_labels.py  test_embedded_table_display.py  test_enhanced_editor.py  test_lifecycle_routes.py  test_logger_injection.py  test_logger_service_injection.py  test_module_scenario.py  test_nays_module.py  test_nays_module_providers.py  test_nays_module_routes.py  test_real_world_transform.py  test_router_navigation_with_params.py  test_save_cancel_callbacks.py  test_table_editor.py  test_table_view_handler.py  test_table_view_yaml_config.py  test_toolbar_fix.py  test_transform_existing_table.py  test_tree_view.py  test_ui_dialog_usage.py  test_ui_master_material_usage.py  test_viewmodel_providers.py  ui_dialog_line_master_material.py  ui_dialog_line_master_material_edit.py  (+2 more)
ui/: base_dialog.py  base_view.py  base_widget.py  base_window.py  based_tabular_model.py
ui/decorator/: file_dialog.py  onsignal_decorator.py
ui/handler/: __init__.py  data_table_handler.py  graphic_plot_handler.py  process_handler.py  script_handler.py  tab_handler.py
ui/helper/: icon_helper.py  message_box_helper.py
