[metadata]
name = nays
version = 1.0.0
description = A NestJS-like Python modular framework with PySide6 UI support
author = Nays Contributors
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
install_requires =
    injector
    dataclasses
    python-dotenv
    colorama
    pyside6

[options.packages.find]
exclude =
    test*
    ui*

[bdist_wheel]
universal = 0

# Coverage configuration
[coverage:run]
source = nays
omit =
    */test/*
    */tests/*
    */__pycache__/*
    .venv/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:

# Mypy configuration (static type checker)
[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True
show_error_codes = True
exclude = (^\.venv/|^build/|^dist/)

[mypy-tests.*]
ignore_errors = True
